comperrors
Main.java:2: error: -> expected
System.out.println(();
                     ^
Main.java:2: error: ')' expected
System.out.println(();
                      ^
2 errors
